fix: remove body overflow scroll (#49)

--- a/src/containers/app/app.scss
+++ b/src/containers/app/app.scss
@@ -7,7 +7,6 @@
 body {
   background: #000;
   margin: 0;
-  overflow: scroll;
 }
 
 .link {
